# Mini-6DOF

./: .gitignore  .gitmodules  LICENSE  README.md
3D Parts/: Lower Seat Rail.stl  Seat Rail.stl  Servo Motor Mount.stl  pcb mount v1.stl  top v58.f3d
Android/: build.gradle.kts  settings.gradle  settings.gradle.kts
Android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
Android/app/src/androidTest/java/com/knaufinator/mini6dofcontroller/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/knaufinator/mini6dof/: MainActivity.kt  Mini6DOFApp.kt
Android/app/src/main/java/com/knaufinator/mini6dof/ble/: BleManager.kt
Android/app/src/main/java/com/knaufinator/mini6dof/sensor/: ImuManager.kt
Android/app/src/main/java/com/knaufinator/mini6dof/ui/composables/: CarVisualization.kt
Android/app/src/main/java/com/knaufinator/mini6dof/ui/nav/: AppNavigation.kt
Android/app/src/main/java/com/knaufinator/mini6dof/ui/screens/: ConnectionScreen.kt  ControlScreen.kt  (+2 more)
Android/app/src/main/java/com/knaufinator/mini6dof/viewmodel/: PlatformViewModel.kt
Android/app/src/main/java/com/knaufinator/mini6dofcontroller/: BluetoothHandler.java  DeviceAdapter.java  DeviceWrapper.java  FirstFragment.java  MainActivity.java  SecondFragment.java
Android/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/navigation/: nav_graph.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/knaufinator/mini6dofcontroller/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Controller/: README.md  build-esp-idf.ps1  partitions.csv  sdkconfig.defaults
Controller/include/: BleTransport.h  CobsTransport.h  InverseKinematics.h  MotionCueing.h  cobs.h  debug_uart.h  helpers.h
Controller/main/: AxisScaling.cpp  BleTransport.cpp  CMakeLists.txt  CobsTransport.cpp  MotionCueing.cpp  laps123_moderate.m6p  main.cpp
MiniServoController/: MiniServoController.ino  helpers.h
PCB/: BOM_PCB_MiniOpen6DOF_2022-01-20.csv
PCBv1/: CMakeLists.txt  README.md  build-esp-idf.ps1  sdkconfig.defaults
PCBv1/include/: AxisScaling.h  helpers.h  version.h
PCBv1/main/: BleTransport.cpp  InverseKinematics.cpp  helpers.cpp  main.cpp
(+2 files in other folders)
